test/res/error/cd3_res1.tmp
[00;34m[[00m1[00;34m][00m  +  cd  coucou [00m
/Users/stdenis/Documents/42/42sh/42sh/test
